app-deploy/backend/overlays/prod/backend-prod-deploy-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  template:
    spec:
      containers:
      - name: backend
        resources:
          requests:
            cpu: "300m"   
            memory: "512Mi"  
          limits:
            cpu: "700m"   
            memory: "1Gi"
